# anti-wall

./: .env_example  .gitignore  README.md  environment.yml  pyproject.toml
assets/icons/equipment/: README.md
docs/: architecture.md  readme-details.md  side-smoke-corpus-roadmap.md  sound-feed-governance.md  technical-roadmap.md  viewer-decoupling-checklist.md
scripts/: animate_round.py  parse_demo_sample.py  round_gui.py  round_render.py
src/wall/: __main__.py  assets.py  cli.py  output.py  paths.py  profile.py
src/wall/analysis/: visibility_export.py
src/wall/dataset/: __init__.py  index.py  rounds.py
src/wall/domain/: bomb.py  player.py  sound.py  utility.py  visibility.py  visibility_profile.py  weapon_overrides.py  weapons.py
src/wall/io/: demo_parse.py  duckdb_catalog.py  grenade_segments.py  sound_effects.py  table_io.py
src/wall/render/: round_pygame_components.py  round_pygame_effects.py  round_render.py
src/wall/sound/: __init__.py  exposure.py  feed.py
tests/: test_assets.py  test_bomb_timeline.py  test_cli_visibility_artifact.py  test_dataset_index.py  test_demo_parse_sound_events.py  test_grenade_segments.py  test_output_modes.py  test_player_timeline.py  test_round_inference.py  test_sound_exposure_export.py  test_sound_timeline.py  test_terminal_progress.py  test_utility_timeline.py  test_viewer_info_events.py  test_viewer_player_frame.py  test_viewer_render_helpers.py  test_viewer_runtime.py  test_viewer_session.py  test_viewer_shell.py  test_viewer_state.py  test_viewer_ui.py  test_visibility_export.py  test_visibility_timeline.py
(+24 files in other folders)
